--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <p id="owner">Owner Biography:</p>
     
-    <image src="images/hardhatandbunnyears.jpg" alt="guy in a hard hat and bunny ears" title="guy at work wearing a yellow hard hat with bunny ears."></image>
+    <image src="hardhatandbunnyears.jpg" alt="guy in a hard hat and bunny ears" title="guy at work wearing a yellow hard hat with bunny ears."></image>
   
 <ul><!--got information from https://www.webucator.com/how-to/how-properly-nest-lists-html.cfm for the sublist-->
   <li>Education - I went to College at a prestigious University called "University of Pristigious Studies and Stuff"</li>
